style.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Inter", sans-serif;
}

:root {
  /* --dark-grey: #333333; */
  --medium-grey: #636363;
  /* --light-grey: #eeeeee; */
  /* --ash: #f4f4f4; */
  --white: white;
  --border: 1px solid var(--light-grey);
  --shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
  --primary: #242424;
  --secondary: #1a1a1a;
  --font: white;
  --button: #242424;
  --button-color: white;
  --card: #1a1a1a;
}

body {
  background-color: var(--primary);
  color: var(--font);
  padding-bottom: 5rem;
  max-width: 100vw;
  font-family: inherit;
  letter-spacing: -0.4px;
}

p {
  font-size: 1rem;
  margin: 0.4rem;
}

h1, h2, h3 {
  margin-bottom: 0.5rem;
}

.home-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 100vw;
}

.main-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  flex-direction: column;
}

.card {
  background-color: var(--card);
  color: var(--white);
  border-radius: 0.75rem;
  text-align: center;
  width: 30vw;
  height: fit-content;
  min-width: fit-content;
  margin: 1%;
  padding: 1rem 1.8rem;
}

.button {
  height: 60px;
  width: 200px;
  border: solid 1px var(--button);
  border-radius: 0.5rem;
  margin: 20px;
  background-color: var(--button);
  color: var(--button-color);
}

#user-input {
  display: block;
  margin-top: 10px;
  background-color: var(--primary);
  border: 1px solid var(--primary);
  color: var(--font);
  border-radius: 0.25rem;
  position: relative;
  padding: 2px;
}

.input-container {
  display: flex;
  justify-content: center;
}

.italics {
  font-style: italic;
}

.icon-main-container {
  display: flex;
  justify-content: center;
}

.sub-container {
  display: flex;
  flex-direction: row;
}

.icon-container {
  width: 100px;
  height: fit-content;
  font-size: xx-large;
  align-items: center;
  text-align: center;
  margin: 0.2rem;
  border-radius: 0.5rem;
  padding: 0.5rem;
  /* background-color: var(--primary); */
}

.icon-container-large {
  width: 100px;
  height: fit-content;
}

.img-lrg {
  height: 100px;
  font-size: 64px
}

.flexbox {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

hr {
  border-top: 1px solid #8c8b8b;
  margin-top: 2rem;
}

/* coin flip */

.coin-container { 
  border-radius: 20px; 
  box-shadow: 0 10px 20px
      rgba(0, 0, 0, 0.3); 
  padding: 2rem; 
  text-align: center; 
  animation: fadeIn 1s ease; 
  width: 80%; 
  max-width: 500px; 
  perspective: 1000px; 
} 

.coin { 
  width: 150px; 
  height: 150px; 
  border-radius: 50%; 
  transition: transform 0.5s 
      ease-in-out; 
  margin: 0 auto; 
  backface-visibility: hidden; 
} 

.coin-button:hover { 
  transform: scale(1.05); 
} 

.coin:hover { 
  transform: scale(1.1); 
  transition: transform 0.3s 
      ease-in-out; 
} 

@keyframes spin { 
  0% { 
      transform: rotateY(0deg); 
  } 
  100% { 
      transform: rotateY(360deg); 
  } 
} 

.coin.flip { 
  animation: spin 1s 
      cubic-bezier(0.4, 2.5, 0.6, 0.5); 
} 

.coin img { 
  width: 100%; 
  height: 100%; 
  object-fit: cover; 
  object-position: center; 
  transform: rotateY(0deg); 
} 

.coin-container { 
  padding: 20px; 
  border-radius: 10px; 
  box-shadow: 0 4px 10px
      rgba(0, 0, 0, 0.2); 
  transition: transform 0.5s 
      ease-in-out; 
} 

.coin-container:hover { 
  transform: scale(1.02); 
} 

/* nav */

#hamburger {
  background-color: var(--secondary);
  border: none;
}

.bx {
  color: var(--font);
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
  color: inherit;
}

.btn {
  display: block;
  background-color: var(--primary-color);
  color: var(--white);
  text-align: center;
  padding: 0.6rem 1.4rem;
  font-size: 1rem;
  font-weight: 500;
  border-radius: 5px;
}

/* .icon {
  padding: 0.5rem;
  background-color: var(--light-grey);
  border-radius: 10px;
} */

/* .logo {
  margin-right: 1.5rem;
} */

#nav-menu {
  margin-bottom: 1rem;
  background-color: var(--secondary);
}

.container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  column-gap: 2rem;
  height: 90px;
  padding: 1.2rem 3rem;
}

.menu {
  position: relative;
}
/* 
.menu-bar li:first-child .dropdown {
  flex-direction: initial;
  min-width: 480px;
}

.menu-bar li:first-child ul:nth-child(1) {
  border-right: var(--border);
}

.menu-bar li:nth-child(n + 2) ul:nth-child(1) {
  border-bottom: var(--border);
} */

.menu-bar .dropdown-link-title {
  color: black;
  font-weight: 600;
}

.menu-bar .nav-link {
  font-size: large;
  font-weight: 500;
  letter-spacing: -0.6px;
  padding: 0.3rem;
  min-width: 60px;
  margin: 0 0.6rem;
}

.menu-bar .nav-link:hover,
.dropdown-link:hover {
  color: var(--primary-color);
}

.nav-start,
.nav-end,
.menu-bar,
.right-container,
.right-container .search {
  display: flex;
  align-items: center;
}

.dropdown {
  display: flex;
  flex-direction: column;
  min-width: 230px;
  background-color: var(--white);
  border-radius: 10px;
  position: absolute;
  top: 36px;
  z-index: 1;
  visibility: hidden;
  opacity: 0;
  transform: scale(0.97) translateX(-5px);
  transition: 0.1s ease-in-out;
  box-shadow: var(--shadow);
}

.dropdown.active {
  visibility: visible;
  opacity: 1;
  transform: scale(1) translateX(5px);
}

.dropdown ul {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding: 1.2rem;
  font-size: 0.95rem;
}

.dropdown-btn {
  color: black;
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 0.15rem;
  background: none;
	color: inherit;
	border: none;
}

.dropdown-link {
  color: black;
  display: flex;
  gap: 0.5rem;
  padding: 0.5rem 0;
  border-radius: 7px;
  transition: 0.1s ease-in-out;
}

.dropdown-link p {
  font-size: 0.8rem;
  color: var(--medium-grey);
}

.right-container {
  display: flex;
  align-items: center;
  column-gap: 1rem;
}

.right-container .search {
  position: relative;
}

.right-container img {
  border-radius: 50%;
}

.search input {
  background-color: var(--ash);
  border: none;
  border-radius: 6px;
  padding: 0.7rem;
  padding-left: 2.4rem;
  font-size: 16px;
  width: 100%;
  border: var(--border);
}

.search .bx-search {
  position: absolute;
  left: 10px;
  top: 50%;
  font-size: 1.3rem;
  transform: translateY(-50%);
  opacity: 0.6;
}

#hamburger {
  display: none;
  padding: 0.1rem;
  margin-left: 1rem;
  font-size: 1.9rem;
}

@media (max-width: 1100px) {
  #hamburger {
    display: block;
  }

  .container {
    padding: 1.2rem;
  }

  .home-container {
    justify-content: center;
  }

  .card {
    width: 80vw;
  }

  .menu {
    display: none;
    position: absolute;
    top: 87px;
    left: 0;
    min-height: 100vh;
    width: 100vw;
    background-color: black;
  }

  .menu-bar li:first-child ul:nth-child(1) {
    border-right: none;
    border-bottom: var(--border);
  }

  .dropdown {
    display: none;
    min-width: 100%;
    border: none !important;
    border-radius: 5px;
    position: static;
    top: 0;
    left: 0;
    visibility: visible;
    opacity: 1;
    transform: none;
    box-shadow: none;
  }

  .menu.show,
  .dropdown.active {
    display: block;
  }

  .dropdown ul {
    padding-left: 0.3rem;
  }

  .menu-bar {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    row-gap: 1rem;
    padding: 1rem;
  }

  .menu-bar .nav-link {
    display: flex;
    justify-content: space-between;
    width: 100%;
    font-weight: 600;
    font-size: 1.2rem;
    margin: 0;
  }

  .menu-bar li:first-child .dropdown {
    min-width: 100%;
  }

  .menu-bar > li:not(:last-child) {
    padding-bottom: 0.5rem;
    border-bottom: var(--border);
  }
}

@media (max-width: 600px) {
  .right-container {
    display: none;
  }
}

